--- a/public/static/css/pokemonpage.css
+++ b/public/static/css/pokemonpage.css
@@ -1,9 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
 .pokemon {
-    padding: 10px;
+    font-family: "Quicksand", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding: 50px; */
+    margin: 50px;
 }
 
-.pokemon .child {
-    background-color: antiquewhite;
-    width: 100px;
-    height: 100px;
+.child {
+    background-color: rgb(255, 255, 255);
+    margin: 15px;
+    padding: 10px;
+    border-radius: 30px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
+
+.name-id-type {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.name-id-type div {
+    width: 200px;
+}
+
+.name-id {
+    display: flex;
+    flex-direction: column;
+}
+
+.pokemon .name {
+    color: blue;
+    font-weight: 600;
+    font-size: 50px;
+}
+
+.id {
+    color: gray;
+    font-size: 25px;
+}
+
